@@ -2,6 +2,8 @@ package com.epam.tc.hw4.composite;
 
 import com.epam.tc.hw4.composite.component.LoginWindowComponent;
 import java.util.List;
+import java.util.stream.Collectors;
+
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
@@ -60,7 +62,7 @@ public class JdiIndexPage extends AbstractJdiBasePage {
     }
 
     public List<String> getHeaderItems() {
-        return headerItems.stream().map(WebElement::getText).toList();
+        return headerItems.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 
     public List<WebElement> getImages() {
@@ -68,7 +70,7 @@ public class JdiIndexPage extends AbstractJdiBasePage {
     }
 
     public List<String> getTexts() {
-        return texts.stream().map(WebElement::getText).toList();
+        return texts.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 
     public List<WebElement> getIframes() {
@@ -83,15 +85,15 @@ public class JdiIndexPage extends AbstractJdiBasePage {
     }
 
     public List<String> getLeftMenuItems() {
-        return leftMenuItems.stream().map(WebElement::getText).toList();
+        return leftMenuItems.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 
     public void openHeaderSubMenu(String menuItem, String subMenuItem) {
         headerItems.stream()
                 .filter(item -> item.getText().contains(menuItem))
-                .toList()
+                .collect(Collectors.toList())
                 .get(0).click();
         wait.until(ExpectedConditions.visibilityOf(headerSubMenu.get(0)));
-        headerSubMenu.stream().filter(item -> item.getText().contains(subMenuItem)).toList().get(0).click();
+        headerSubMenu.stream().filter(item -> item.getText().contains(subMenuItem)).collect(Collectors.toList()).get(0).click();
     }
 }
