@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
@@ -38,13 +39,24 @@ public class JdiUserTablePage extends AbstractJdiBasePage {
     }
 
     public int getTableItemsCounter(String itemType) {
-        return switch (itemType) {
-            case "Dropdowns" -> dropDownItems.size();
-            case "Usernames" ->  usernameItems.size();
-            case "Description texts under images" -> descriptionItems.size();
-            case "Checkboxes" -> checkboxesItems.size();
-            default -> 0;
-        };
+        int count = 0;
+        switch (itemType) {
+            case "Dropdowns":
+                count = dropDownItems.size();
+                break;
+            case "Usernames":
+                count = usernameItems.size();
+                break;
+            case "Description texts under images":
+                count = descriptionItems.size();
+                break;
+            case "Checkboxes":
+                count = checkboxesItems.size();
+                break;
+            default:
+                break;
+        }
+        return count;
     }
 
     public List<Map<String, String>> getTableFromUserPage() {
@@ -63,7 +75,7 @@ public class JdiUserTablePage extends AbstractJdiBasePage {
         dropDownItems.get(0).click();
         wait.until(ExpectedConditions.visibilityOf(dropDownOptions.get(0)));
         System.out.println(dropDownOptions.get(0).getText());
-        return dropDownOptions.stream().map(WebElement::getText).toList();
+        return dropDownOptions.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 
     public void selectCheckBox(String userName) {
@@ -74,7 +86,7 @@ public class JdiUserTablePage extends AbstractJdiBasePage {
     public List<String> getLogs() {
         if (logs.size() != 0) {
             return logs.stream().map(WebElement::getText)
-                    .map(item -> item.substring(9, item.length())).toList();
+                    .map(item -> item.substring(9, item.length())).collect(Collectors.toList());
         } else {
             return null;
         }
