@@ -8,6 +8,7 @@ import org.openqa.selenium.support.FindBy;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class JdiIndexPage extends AbstractJdiBasePage {
 
@@ -61,7 +62,7 @@ public class JdiIndexPage extends AbstractJdiBasePage {
     }
 
     public List<String> getHeaderItems() {
-        return headerItems.stream().map(WebElement::getText).toList();
+        return headerItems.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 
     public List<WebElement> getImages() {
@@ -69,7 +70,7 @@ public class JdiIndexPage extends AbstractJdiBasePage {
     }
 
     public List<String> getTexts() {
-        return texts.stream().map(WebElement::getText).toList();
+        return texts.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 
     public List<WebElement> getIframes() {
@@ -84,15 +85,15 @@ public class JdiIndexPage extends AbstractJdiBasePage {
     }
 
     public List<String> getLeftMenuItems() {
-        return leftMenuItems.stream().map(WebElement::getText).toList();
+        return leftMenuItems.stream().map(WebElement::getText).collect(Collectors.toList());
     }
 
     public void openHeaderSubMenu(String menuItem, String subMenuItem) {
         headerItems.stream()
                 .filter(item -> item.getText().contains(menuItem))
-                .toList()
+                .collect(Collectors.toList())
                 .get(0).click();
         wait.until(ExpectedConditions.visibilityOf(headerSubMenu.get(0)));
-        headerSubMenu.stream().filter(item -> item.getText().contains(subMenuItem)).toList().get(0).click();
+        headerSubMenu.stream().filter(item -> item.getText().contains(subMenuItem)).collect(Collectors.toList()).get(0).click();
     }
 }
